--- a/style.css
+++ b/style.css
@@ -3,9 +3,12 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+@import url('https://fonts.googleapis.com/css2?family=Amiri:ital@1&display=swap');
 .contenedor{
-    background-color: #bbfaea;
+    background: url(./imagenes/primer-plano-mano-llaves-coche.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 .wrapper{
     margin: auto;
@@ -24,6 +27,7 @@ header .logo{
     font-size: 50px;
     line-height: 150px;
     float: left;
+    font-family: 'Amiri', serif;
 }
 header nav{
     float: right;
@@ -39,16 +43,26 @@ header nav a{
     font-weight: 700;
 }
 .servicios{
-    background-color: #e2e2e2;
+    background-color: transparent;
     display: grid;
-    grid-template-columns: repeat(2,minmax(min-content,1fr));
+    grid-template-columns: repeat(2,minmax(min-content,250px));
     place-content: center;
     gap: 100px;
     margin: auto;
+    padding: 80px 0;
 }
 .serviciosDescripcion{
     padding: 10px;
+    margin: 10px;
     text-align: center;
+    color: #000;
+    box-shadow: 0 0 20px rgb(0,0,0);
+    border-radius: 10px;
+}
+.listaServicios{
+    list-style:circle;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: medium;
 }
 .contacto{
     background-color: #000;
