--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ header nav a{
     margin: 10px;
     text-align: center;
     color: #000;
+    background-color: rgba(255,255,255,0.6);
     box-shadow: 0 0 20px rgb(0,0,0);
     border-radius: 10px;
 }
