--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ header nav a{
 .servicios{
     background-color: transparent;
     display: grid;
-    grid-template-columns: repeat(2,minmax(min-content,250px));
+    grid-template-columns: repeat(3,minmax(min-content,250px));
     place-content: center;
     gap: 100px;
     margin: auto;
@@ -67,7 +67,13 @@ header nav a{
 }
 .contacto{
     background-color: #000;
+    text-align: center;
+    display: grid;
+    grid-template-rows: 3;
 }
 footer{
     background-color: #636161;
+    display: grid;
+    grid-template-columns: auto auto;
+
 }
