--- a/style.css
+++ b/style.css
@@ -66,13 +66,13 @@ header nav a{
     font-size: medium;
 }
 .contacto{
-    background-color: #000;
+    background-color: #636161;
     text-align: center;
-    display: grid;
-    grid-template-rows: 3;
+    list-style-type: none;
 }
 footer{
     background-color: #636161;
     display: grid;
     grid-template-columns: auto auto;
+    list-style:none;
 }
