--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@
     overflow: hidden;
 }
 header{
-    background-color: #ccc;
-    width: 100%;
+    background:url(./imagenes/faros-potentes-vista-particulas-automoviles-lujo-modernos-estacionados-interiores-dia.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
     overflow: hidden;
     margin-bottom: 20px;
 }
@@ -33,21 +35,41 @@ header nav{
     float: right;
     line-height: 150px;
 }
-header nav a{
+.links{
     display: inline-block;
     color: #fff;
     text-decoration: none;
+    position: relative;
     padding: 10px 20px;
     line-height: normal;
     font-size: 20px;
-    font-weight: 700;
+    font-weight: 500;
 }
+.links::after{
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 3px;
+    bottom: 0;
+    left: 0;
+    background-color: #a56216;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.6s ease-out;
+}
+.links:hover::after{
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
+/* .navLogo{
+
+} */
 .servicios{
     background-color: transparent;
     display: grid;
     grid-template-columns: repeat(3,minmax(min-content,250px));
     place-content: center;
-    gap: 100px;
+    gap: 30px;
     margin: auto;
     padding: 80px 0;
 }
@@ -56,7 +78,7 @@ header nav a{
     margin: 10px;
     text-align: center;
     color: #000;
-    background-color: rgba(255,255,255,0.6);
+    background-color: rgba(255,255,255,0.9);
     box-shadow: 0 0 20px rgb(0,0,0);
     border-radius: 10px;
 }
@@ -68,11 +90,15 @@ header nav a{
 .contacto{
     background-color: #636161;
     text-align: center;
-    list-style-type: none;
+}
+.contacto li{
+    list-style: none;
+    padding: 20px;
+
 }
 footer{
     background-color: #636161;
     display: grid;
     grid-template-columns: auto auto;
-    list-style:none;
+    text-decoration: none;
 }
