--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ header nav{
     font-size: 20px;
     font-weight: 500;
 }
+.links:hover{
+    color: #fff;
+}
 .links::after{
     content: '';
     position: absolute;
@@ -55,7 +58,7 @@ header nav{
     background-color: #a56216;
     transform: scaleX(0);
     transform-origin: bottom right;
-    transition: transform 0.6s ease-out;
+    transition: transform 0.4s ease-out;
 }
 .links:hover::after{
     transform: scaleX(1);
@@ -82,23 +85,44 @@ header nav{
     box-shadow: 0 0 20px rgb(0,0,0);
     border-radius: 10px;
 }
+.serviciosDescripcion h4{
+    padding: 10px;
+}
 .listaServicios{
     list-style:circle;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: medium;
 }
+footer{
+    background:url(./imagenes/grandes-manos-hombre-volante-mientras-conduce-coche.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: grid;
+    grid-template-columns: auto auto;
+    text-decoration: none;
+    padding: 5px;
+}
+.contacto,.contacto2{
+    background-color: rgba(255,255,255,0.4);
+    border-radius: 5px;
+}
 .contacto{
-    background-color: #636161;
     text-align: center;
 }
 .contacto li{
     list-style: none;
     padding: 20px;
-
+    font-size: 2rem;
 }
-footer{
-    background-color: #636161;
-    display: grid;
-    grid-template-columns: auto auto;
-    text-decoration: none;
+/* #instagram{
+
+} */
+.contacto li a{
+    text-decoration:none ;
+    color: #000;
+    transition: 0.6s;
+}
+.contacto li a:hover{
+    color: #f0b777;
 }
