--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ header nav{
 }
 .listaServicios{
     list-style:circle;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-family:Verdana, Geneva, Tahoma, sans-serif;
     font-size: medium;
 }
 footer{
@@ -104,7 +104,7 @@ footer{
     padding: 5px;
 }
 .contacto,.contacto2{
-    background-color: rgba(255,255,255,0.4);
+    background-color: rgba(0,0,0,0.6);
     border-radius: 5px;
 }
 .contacto{
@@ -115,9 +115,18 @@ footer{
     padding: 20px;
     font-size: 2rem;
 }
-/* #instagram{
-
-} */
+.contactoTelefono, .eMail{
+color: #fff;
+}
+#instagram{
+    color: #fff;
+    transition:  0.5s ease-in-out;
+}
+#instagram:hover{
+    transform: rotate(45deg);
+    filter: drop-shadow(0 0 15px red);
+    color: #5d0cf3;
+}
 .contacto li a{
     text-decoration:none ;
     color: #000;
