--- a/style.css
+++ b/style.css
@@ -4,10 +4,6 @@
     box-sizing: border-box;
 }
 @import url('https://fonts.googleapis.com/css2?family=Amiri:ital@1&display=swap');
-.contenedor{
-
-
-}
 .wrapper{
     margin: auto;
     width: 90%;
@@ -20,7 +16,6 @@ header{
     background-size: cover;
     height: 100vh;
     overflow: hidden;
-
 }
 header nav{
     float: right;
@@ -156,6 +151,9 @@ color: #fff;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
+        top: 0;
+        left: 0;
     }
     .span1{
         color: #6b6b6b;
@@ -173,5 +171,9 @@ color: #fff;
 }
 
 @media screen and (max-width: 700px){
-    
+    .servicios{
+        display: flex;
+        flex-wrap: wrap;
+        align-content: flex-start;
+    }
 }
