--- a/style.css
+++ b/style.css
@@ -145,6 +145,16 @@ color: #fff;
 .contacto2 h3{
     color: #fff;
 }
+.freepik{
+    text-decoration: none;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    text-align: right;
+    color: #eee;
+    font-size: 15px;
+    line-height: 15px;
+}
 
 @media screen and (max-width: 950px){
     .navLogo{
