--- a/style.css
+++ b/style.css
@@ -197,6 +197,11 @@ color: #fff;
     .navegador{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        margin-top: 100px;
+    }
+    .links{
+        padding: 20px;
     }
     .logo{
         font-size: 50px;
