--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ footer{
     padding: 20px;
     font-size: 2rem;
 }
-.contactoTelefono, .eMail{
+.contactoTelefono{
 color: #fff;
 }
 #instagram{
@@ -136,13 +136,16 @@ color: #fff;
 }
 .contacto li a{
     text-decoration:none ;
-    color: #000;
+    color: #fff;
     transition: 0.6s;
 }
 .contacto li a:hover{
     color: #f0b777;
 }
 .contacto2 h3{
+    color: #fff;
+}
+.eMail{
     color: #fff;
 }
 .freepik{
