--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ header{
     background-position: center;
     height: 100vh;
     overflow: hidden;
+    
 }
 header nav{
     float: right;
@@ -30,7 +31,8 @@ header nav{
     padding: 10px 20px;
     line-height: normal;
     font-size: 20px;
-    font-weight: 500;
+    font-weight: 700;
+    top: -25px;
 }
 .links:hover{
     color: #fff;
