--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ header nav{
     float: right;
     line-height: 150px;
 }
+.navegador a::first-letter{
+    color: #a56216;
+}
 .links{
     display: inline-block;
     color: #fff;
@@ -171,6 +174,9 @@ color: #fff;
         top: 0;
         left: 0;
     }
+    .navegador a::first-letter{
+        color: #a56216;
+    }
     .span1{
         color: #6b6b6b;
         padding: 5px;
@@ -208,6 +214,9 @@ color: #fff;
         flex-direction: column;
         align-items: center;
         margin-top: 100px;
+    }
+    .navegador a::first-letter{
+        color: #a56216;
     }
     .links{
         padding: 20px;
